<resources>
    <string name="app_name">Dockmaster</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <!--LOGIN PAGE-->
    <string name="title_activity_login">Login</string>
    <string name="title_label">Dockmaster</string>
    <string name="subTitle_label">The scheduling app for construction</string>
    <string name="login_button">Login</string>
    <string name="incorrect_password">Incorrect Password. Try again.</string>

    <!--CREATE ACCOUNT PAGE-->
    <string name="title_activity_create_account">Create Account</string>
    <string name="firstName_label">First Name</string>
    <string name="lastName_label">Last Name</string>
    <string name="companyName_label">Company Name</string>
    <string name="email_label">Email</string>
    <string name="password_label">password</string>
    <string name="phoneNumber_label">phoneNumber</string>
    <string name="createAccount_button">Create account</string>

    <!--FORGOT PASSWORD PAGE-->
    <string name="title_activity_forgot_password">Forgot Password</string>

    <!--PROJECTS LIST PAGE-->
    <string name="title_activity_projects_list">Project List</string>

    <!--PROJECTS DESCRIPTION PAGE-->
    <string name="projectDescription_projectName">Project Name</string>
    <string name="projectDescription_projectAddress">Project Address</string>
    <string name="date_picker_title">Date of booking: </string>

    <!--MY SCHEDULE PAGE-->


    <!--  MENU EDIT USER PROFILE -->
    <string name="userSettings_editProfile">Edit Profile</string>
    <string name="title_activity_main_">Main_Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <!-- FONT NAMES -->
    <string name="asset_custom_font_headline">StagApp-Medium.ttf</string>
    <string name="font_family_medium">sans-serif</string>
    <string name="font_family_medium_bold">sans-serif-bold</string>
    <string name="font_family_sans_medium">sans-serif-medium</string>

    <!-- EXAMPLE -->

    <string name="element_text">Element</string>
    <string name="grid_layout_manager">Grid Layout Manager</string>
    <string name="linear_layout_manager">Linear Layout Manager</string>




</resources>
