<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimary"
              android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:src="@drawable/johnsmith"/>

    <EditText
        android:id="@+id/firstName_textEdit"
        style="@style/InputTextField"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/margin_padding_normal"
        android:layout_marginLeft="@dimen/margin_padding_normal"
        android:layout_marginRight="@dimen/margin_padding_normal"
        android:layout_marginTop="@dimen/margin_padding_large"
        android:hint="@string/firstName_label"/>

    <EditText
        android:id="@+id/lastName_textEdit"
        style="@style/InputTextField"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/margin_padding_normal"
        android:layout_marginLeft="@dimen/margin_padding_normal"
        android:layout_marginRight="@dimen/margin_padding_normal"
        android:hint="@string/lastName_label"/>

    <EditText
        android:id="@+id/companyName_textEdit"
        style="@style/InputTextField"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/margin_padding_normal"
        android:layout_marginLeft="@dimen/margin_padding_normal"
        android:layout_marginRight="@dimen/margin_padding_normal"
        android:hint="@string/companyName_label"/>

    <EditText
        android:id="@+id/email_textEdit"
        style="@style/InputTextField"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/margin_padding_normal"
        android:layout_marginLeft="@dimen/margin_padding_normal"
        android:layout_marginRight="@dimen/margin_padding_normal"
        android:hint="@string/email_label"/>

    <EditText
        android:id="@+id/password_textEdit"
        style="@style/InputTextField"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/margin_padding_normal"
        android:layout_marginLeft="@dimen/margin_padding_normal"
        android:layout_marginRight="@dimen/margin_padding_normal"
        android:hint="@string/password_label"/>

    <EditText
        android:id="@+id/phoneNumber_textEdit"
        style="@style/InputTextField"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/margin_padding_normal"
        android:layout_marginLeft="@dimen/margin_padding_normal"
        android:layout_marginRight="@dimen/margin_padding_normal"
        android:hint="@string/phoneNumber_label"/>

    <Button
        android:id="@+id/createAccount_button"
        style="@style/RoundedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_normal"
        android:paddingLeft="@dimen/margin_padding_small"
        android:paddingRight="@dimen/margin_padding_small"
        android:text="@string/createAccount_button"/>
</LinearLayout>

